--- a/Validation/validate_blocked_c2_3fr.Rmd
+++ b/Validation/validate_blocked_c2_3fr.Rmd
@@ -39,9 +39,6 @@ panderOptions('round', 3)
 # simulation and user parameters
 source(here::here("Validation/Simulations", "params.R"))
 params.default <- user.params.list
-
-# validate MDES and sample size?
-validate.mdes.ss = FALSE
 ```
 
 ```{r}
@@ -49,17 +46,6 @@ validate.mdes.ss = FALSE
 user.params.list[['K']] <- 10
 user.params.list[['omega.2']] <- 0
 user.params.list[['omega.3']] <- params.default[['omega.3']]
-```
-
-
-# Power Validation
-
-```{r sim.params}
-# print(sim.params.list)
-```
-
-```{r user.params}
-# print(user.params.list)
 ```
 
 Default parameters:
@@ -76,14 +62,14 @@ Default parameters:
 ## Varying school size
 
 ```{r nj100}
-user.params.list[['n.j']] <- 100
+user.params.list[['nbar']] <- 100
 ```
 
 $\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 3f.nj100}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- 0
+user.params.list[['ICC.3']] <- rep(0, M)
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_c2_3f_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_c2_3f_nj100_power_plot)
@@ -98,14 +84,14 @@ print(blocked_c2_3r_nj100_power_plot)
 ```
 
 ```{r nj75}
-user.params.list[['n.j']] <- 75
+user.params.list[['nbar']] <- 75
 ```
 
 $\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 3f.nj75}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- 0
+user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_nj75_power_plot)
 ```
@@ -118,14 +104,14 @@ print(blocked_c2_3r_nj75_power_plot)
 ```
 
 ```{r nj50}
-user.params.list[['n.j']] <- 50
+user.params.list[['nbar']] <- 50
 ```
 
 $\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 3f.nj50}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- 0
+user.params.list[['ICC.3']] <- rep(0, M)
 blocked_i1_3f_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3f_nj50_power_plot)
 ```
@@ -147,7 +133,7 @@ $R^2_1 =$ `r user.params.list[['R2.1']]`
 
 ```{r 3f.r2.10.6}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- 0
+user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.1_power_plot)
 ```
@@ -164,7 +150,7 @@ $R^2_2 =$ `r user.params.list[['R2.2']]`
 
 ```{r 3f.r2.20.6}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- 0
+user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.2_power_plot)
 ```
@@ -181,12 +167,36 @@ $R^2_3 =$ `r user.params.list[['R2.3']]`
 
 ```{r 3f.r2.30.6}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- 0
+user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.3_power_plot)
 ```
 
 ```{r r2.3.reset}
+user.params.list[['R2.3']] <- params.default[['R2.3']] 
+```
+
+
+```{r r2.10r2.20r2.30}
+user.params.list[['R2.1']] <- rep(0, M)  
+user.params.list[['R2.2']] <- rep(0, M)  
+user.params.list[['R2.3']] <- rep(0, M)  
+```
+
+$R^2_1 =$ `r user.params.list[['R2.1']]`
+$R^2_2 =$ `r user.params.list[['R2.2']]`
+$R^2_3 =$ `r user.params.list[['R2.3']]`
+
+```{r 3f.r2.10r2.20r2.30}
+design <- "blocked_c2_3f"
+user.params.list[['ICC.3']] <- rep(0, M)
+blocked_c2_3f_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3f_r2.3_power_plot)
+```
+
+```{r r2.reset}
+user.params.list[['R2.1']] <- params.default[['R2.1']] 
+user.params.list[['R2.2']] <- params.default[['R2.2']] 
 user.params.list[['R2.3']] <- params.default[['R2.3']] 
 ```
 
@@ -204,7 +214,7 @@ $\rho =$ `r user.params.list[['rho.default']]`
 
 ```{r 3f.rho0.2}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- 0
+user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_rho0.2_power_plot)
 ```
@@ -221,7 +231,7 @@ $\rho =$ `r user.params.list[['rho.default']]`
 
 ```{r 3f.rho0.8}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- 0
+user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_rho0.8_power_plot)
 ```
@@ -246,7 +256,7 @@ ATE (ES) = `r user.params.list[['ATE_ES']]`
 
 ```{r 3f.MDES0.12500}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- 0
+user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_mdes0.1250.00.0.00_power_plot)
 ```
@@ -265,7 +275,7 @@ $\text{ICC}_2$ = `r user.params.list[['ICC.2']]`
 
 ```{r 3f.ICC20.7}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- 0
+user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_ICC2.0.7_power_plot)
 ```
@@ -307,7 +317,7 @@ $\omega_3$ = `r user.params.list[['omega.3']]`
 
 ```{r 3f.omega30.8}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- 0
+user.params.list[['ICC.3']] <- rep(0, M)
 blocked_i1_3f_omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3f_omega3.0.8_power_plot)
 ```
