--- a/Validation/validate_blocked_c2_3fr.Rmd
+++ b/Validation/validate_blocked_c2_3fr.Rmd
@@ -69,7 +69,7 @@ $\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 3f.nj100}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_c2_3f_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_c2_3f_nj100_power_plot)
@@ -91,7 +91,7 @@ $\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 3f.nj75}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_nj75_power_plot)
 ```
@@ -111,7 +111,7 @@ $\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 3f.nj50}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_i1_3f_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3f_nj50_power_plot)
 ```
@@ -133,7 +133,7 @@ $R^2_1 =$ `r user.params.list[['R2.1']]`
 
 ```{r 3f.r2.10.6}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.1_power_plot)
 ```
@@ -150,7 +150,7 @@ $R^2_2 =$ `r user.params.list[['R2.2']]`
 
 ```{r 3f.r2.20.6}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.2_power_plot)
 ```
@@ -167,7 +167,7 @@ $R^2_3 =$ `r user.params.list[['R2.3']]`
 
 ```{r 3f.r2.30.6}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.3_power_plot)
 ```
@@ -189,7 +189,7 @@ $R^2_3 =$ `r user.params.list[['R2.3']]`
 
 ```{r 3f.r2.10r2.20r2.30}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.3_power_plot)
 ```
@@ -214,7 +214,7 @@ $\rho =$ `r user.params.list[['rho.default']]`
 
 ```{r 3f.rho0.2}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_rho0.2_power_plot)
 ```
@@ -231,7 +231,7 @@ $\rho =$ `r user.params.list[['rho.default']]`
 
 ```{r 3f.rho0.8}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_rho0.8_power_plot)
 ```
@@ -256,7 +256,7 @@ ATE (ES) = `r user.params.list[['ATE_ES']]`
 
 ```{r 3f.MDES0.12500}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_mdes0.1250.00.0.00_power_plot)
 ```
@@ -275,7 +275,7 @@ $\text{ICC}_2$ = `r user.params.list[['ICC.2']]`
 
 ```{r 3f.ICC20.7}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_ICC2.0.7_power_plot)
 ```
@@ -317,7 +317,7 @@ $\omega_3$ = `r user.params.list[['omega.3']]`
 
 ```{r 3f.omega30.8}
 design <- "blocked_c2_3f"
-user.params.list[['ICC.3']] <- rep(0, M)
+# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_i1_3f_omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3f_omega3.0.8_power_plot)
 ```
