--- a/Validation/validate_blocked_c2_3fr.Rmd
+++ b/Validation/validate_blocked_c2_3fr.Rmd
@@ -69,7 +69,6 @@ $\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 3f.nj100}
 design <- "blocked_c2_3f"
-# user.params.list[['ICC.3']] <- rep(0, M)
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_c2_3f_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_c2_3f_nj100_power_plot)
@@ -77,7 +76,6 @@ print(blocked_c2_3f_nj100_power_plot)
 
 ```{r 3r.nj100}
 design <- "blocked_c2_3r"
-user.params.list[['ICC.3']] <- params.default[['ICC.3']]
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_c2_3r_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_c2_3r_nj100_power_plot)
@@ -91,14 +89,12 @@ $\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 3f.nj75}
 design <- "blocked_c2_3f"
-# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_nj75_power_plot)
 ```
 
 ```{r 3r.nj75}
 design <- "blocked_c2_3r"
-user.params.list[['ICC.3']] <- params.default[['ICC.3']]
 blocked_c2_3r_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3r_nj75_power_plot)
 ```
@@ -111,14 +107,12 @@ $\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 3f.nj50}
 design <- "blocked_c2_3f"
-# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_i1_3f_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3f_nj50_power_plot)
 ```
 
 ```{r 3r.nj50}
 design <- "blocked_c2_3r"
-user.params.list[['ICC.3']] <- params.default[['ICC.3']]
 blocked_i1_3r_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3r_nj50_power_plot)
 ```
@@ -133,7 +127,6 @@ $R^2_1 =$ `r user.params.list[['R2.1']]`
 
 ```{r 3f.r2.10.6}
 design <- "blocked_c2_3f"
-# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.1_power_plot)
 ```
@@ -150,7 +143,6 @@ $R^2_2 =$ `r user.params.list[['R2.2']]`
 
 ```{r 3f.r2.20.6}
 design <- "blocked_c2_3f"
-# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.2_power_plot)
 ```
@@ -167,7 +159,6 @@ $R^2_3 =$ `r user.params.list[['R2.3']]`
 
 ```{r 3f.r2.30.6}
 design <- "blocked_c2_3f"
-# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.3_power_plot)
 ```
@@ -189,7 +180,6 @@ $R^2_3 =$ `r user.params.list[['R2.3']]`
 
 ```{r 3f.r2.10r2.20r2.30}
 design <- "blocked_c2_3f"
-# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.3_power_plot)
 ```
@@ -214,7 +204,6 @@ $\rho =$ `r user.params.list[['rho.default']]`
 
 ```{r 3f.rho0.2}
 design <- "blocked_c2_3f"
-# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_rho0.2_power_plot)
 ```
@@ -231,7 +220,6 @@ $\rho =$ `r user.params.list[['rho.default']]`
 
 ```{r 3f.rho0.8}
 design <- "blocked_c2_3f"
-# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_rho0.8_power_plot)
 ```
@@ -256,7 +244,6 @@ ATE (ES) = `r user.params.list[['ATE_ES']]`
 
 ```{r 3f.MDES0.12500}
 design <- "blocked_c2_3f"
-# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_mdes0.1250.00.0.00_power_plot)
 ```
@@ -275,14 +262,12 @@ $\text{ICC}_2$ = `r user.params.list[['ICC.2']]`
 
 ```{r 3f.ICC20.7}
 design <- "blocked_c2_3f"
-# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_c2_3f_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_ICC2.0.7_power_plot)
 ```
 
 ```{r 3r.ICC20.7}
 design <- "blocked_c2_3r"
-user.params.list[['ICC.3']] <- params.default[['ICC.3']]
 blocked_c2_3r_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3r_ICC2.0.7_power_plot)
 ```
@@ -296,6 +281,12 @@ user.params.list[['ICC.3']] <- rep(0.7, M)
 ```
 
 $\text{ICC}_3$ = `r user.params.list[['ICC.3']]`
+
+```{r 3f.ICC30.7}
+design <- "blocked_c2_3f"
+blocked_c2_3f_ICC3.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3f_ICC3.0.7_power_plot)
+```
 
 ```{r 3r.ICC30.7}
 design <- "blocked_c2_3r"
@@ -311,24 +302,45 @@ user.params.list[['ICC.3']] <- params.default[['ICC.3']]
 
 ```{r omega30.8}
 user.params.list[['omega.3']] <- 0.8
+user.params.list[['K']] <- 20
 ```
 
 $\omega_3$ = `r user.params.list[['omega.3']]`
 
 ```{r 3f.omega30.8}
 design <- "blocked_c2_3f"
-# user.params.list[['ICC.3']] <- rep(0, M)
 blocked_i1_3f_omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3f_omega3.0.8_power_plot)
 ```
 
 ```{r 3r.omega30.8}
 design <- "blocked_c2_3r"
-user.params.list[['ICC.3']] <- params.default[['ICC.3']]
 blocked_i1_3r_omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_i1_3r_omega3.0.8_power_plot)
+print(blocked_i1_3r_omega3.0.8ICC30.7_power_plot)
+```
+
+```{r omega30.8ICC30.7}
+user.params.list[['omega.3']] <- 0.8
+user.params.list[['ICC.3']] <- rep(0.7, M)
+user.params.list[['K']] <- 20
+```
+
+$\omega_3$ = `r user.params.list[['omega.3']]`
+$\text{ICC}_3$ = `r user.params.list[['ICC.3']]`
+
+```{r 3f.omega30.8}
+design <- "blocked_c2_3f"
+blocked_i1_3f_omega3.0.8ICC30.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_3f_omega3.0.8ICC30.7_power_plot)
+```
+
+```{r 3r.omega30.8}
+design <- "blocked_c2_3r"
+blocked_i1_3r_omega3.0.8ICC30.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_i1_3r_omega3.0.8ICC30.7_power_plot)
 ```
 
 ```{r omega3.reset}
 user.params.list[['omega.3']] <- params.default[['omega.3']]
+user.params.list[['ICC.3']] <- params.default[['ICC.3']]
 ```
