--- a/Validation/validate_blocked_i1_2cfr.Rmd
+++ b/Validation/validate_blocked_i1_2cfr.Rmd
@@ -42,9 +42,11 @@ source(here::here("Validation/Simulations", "params.R"))
 ```
 
 ```{r universal.params}
+# assumptions
 user.params.list[['K']] <- 1
 user.params.list[['ICC.3']] <- NULL
 user.params.list[['omega.3']] <- NULL
+user.params.list[['R2.3']] <- NULL
 params.default <- user.params.list
 ```
 
@@ -60,7 +62,7 @@ Default parameters:
 
 Parameters by model type:
 
-* Omega: $\omega_2 = 0$ for constant effects, $\omega_2$ = `r user.params.list[['omega.s']]` for fixed and random
+* Omega: $\omega_2 = 0$ for constant effects, $\omega_2$ = `r user.params.list[['omega.2']]` for fixed and random
 * ICC: $\text{ICC}_2 = 0$ for constant and fixed effects, $\text{ICC}_2$ = `r user.params.list[['ICC.2']]` for random effects
 
 Assumptions:
@@ -346,7 +348,7 @@ if(length(mdes.file) == 0)
 
 ```{r 2f.mdes.D1}
 design <- "blocked_i1_2f"
-user.params.list[['omega.2']] <- params.default[['omega.2']]
+user.params.list[['omega.2']] <- 0
 user.params.list[['ICC.2']] <- rep(0, M)
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 mdes.file <- find_file(params.file.base, type = 'mdes')
@@ -409,7 +411,7 @@ if(length(sample.file) == 0)
 
 ```{r 2f.sampleCombined}
 design <- "blocked_i1_2f"
-user.params.list[['omega.2']] <- params.default[['omega.2']]
+user.params.list[['omega.2']] <- 0
 user.params.list[['ICC.2']] <- rep(0, M)
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 sample.file <- find_file(params.file.base, type = 'sample')
