--- a/Validation/validate_blocked_c2_3fr.Rmd
+++ b/Validation/validate_blocked_c2_3fr.Rmd
@@ -68,6 +68,7 @@ $\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 3f.nj100}
 design <- "blocked_c2_3f"
+user.params.list[['R2.3']] <- rep(0, M)
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_c2_3f_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_c2_3f_nj100_power_plot)
@@ -75,6 +76,7 @@ print(blocked_c2_3f_nj100_power_plot)
 
 ```{r 3r.nj100}
 design <- "blocked_c2_3r"
+user.params.list[['R2.3']] <- params.default[['R2.3']]
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 blocked_c2_3r_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
 print(blocked_c2_3r_nj100_power_plot)
@@ -88,12 +90,14 @@ $\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 3f.nj75}
 design <- "blocked_c2_3f"
+user.params.list[['R2.3']] <- rep(0, M)
 blocked_c2_3f_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_nj75_power_plot)
 ```
 
 ```{r 3r.nj75}
 design <- "blocked_c2_3r"
+user.params.list[['R2.3']] <- params.default[['R2.3']]
 blocked_c2_3r_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3r_nj75_power_plot)
 ```
@@ -106,14 +110,16 @@ $\bar{n}$ = `r user.params.list[['nbar']]`
 
 ```{r 3f.nj50}
 design <- "blocked_c2_3f"
-blocked_i1_3f_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_i1_3f_nj50_power_plot)
+user.params.list[['R2.3']] <- rep(0, M)
+blocked_c2_3f_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3f_nj50_power_plot)
 ```
 
 ```{r 3r.nj50}
 design <- "blocked_c2_3r"
-blocked_i1_3r_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_i1_3r_nj50_power_plot)
+user.params.list[['R2.3']] <- params.default[['R2.3']]
+blocked_c2_3r_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3r_nj50_power_plot)
 ```
 
 ## Varying R2
@@ -126,8 +132,16 @@ $R^2_1 =$ `r user.params.list[['R2.1']]`
 
 ```{r 3f.r2.10.6}
 design <- "blocked_c2_3f"
+user.params.list[['R2.3']] <- rep(0, M)
 blocked_c2_3f_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.1_power_plot)
+```
+
+```{r 3r.r2.10.6}
+design <- "blocked_c2_3r"
+user.params.list[['R2.3']] <- params.default[['R2.3']]
+blocked_c2_3r_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3r_r2.1_power_plot)
 ```
 
 ```{r r2.1.reset}
@@ -142,8 +156,16 @@ $R^2_2 =$ `r user.params.list[['R2.2']]`
 
 ```{r 3f.r2.20.6}
 design <- "blocked_c2_3f"
+user.params.list[['R2.3']] <- rep(0, M)
 blocked_c2_3f_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_r2.2_power_plot)
+```
+
+```{r 3r.r2.20.6}
+design <- "blocked_c2_3r"
+user.params.list[['R2.3']] <- params.default[['R2.3']]
+blocked_c2_3r_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3r_r2.1_power_plot)
 ```
 
 ```{r r2.2.reset}
@@ -156,10 +178,10 @@ user.params.list[['R2.3']] <- rep(0.6, M)
 
 $R^2_3 =$ `r user.params.list[['R2.3']]`
 
-```{r 3f.r2.30.6}
-design <- "blocked_c2_3f"
-blocked_c2_3f_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
-print(blocked_c2_3f_r2.3_power_plot)
+```{r 3r.r2.30.6}
+design <- "blocked_c2_3r"
+blocked_c2_3r_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3r_r2.3_power_plot)
 ```
 
 ```{r r2.3.reset}
@@ -183,6 +205,12 @@ blocked_c2_3f_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(use
 print(blocked_c2_3f_r2.3_power_plot)
 ```
 
+```{r 3r.r2.10r2.20r2.30}
+design <- "blocked_c2_3r"
+blocked_c2_3r_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
+print(blocked_c2_3r_r2.3_power_plot)
+```
+
 ```{r r2.reset}
 user.params.list[['R2.1']] <- params.default[['R2.1']] 
 user.params.list[['R2.2']] <- params.default[['R2.2']] 
@@ -195,14 +223,17 @@ user.params.list[['R2.3']] <- params.default[['R2.3']]
 rho.default <- 0.2
 default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
 user.params.list[['rho.default']] <- rho.default
-user.params.list[['rho.X']] <- user.params.list[['rho.C']] <-rho.default
-user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[['rho.r']] <- rho.default
+user.params.list[['rho.V']] <- user.params.list[['rho.X']] <- user.params.list[['rho.C']] <- default.rho.matrix
+user.params.list[['rho.u0']] <- user.params.list[['rho.u1']] <- default.rho.matrix
+user.params.list[['rho.w0']] <- user.params.list[['rho.w1']] <- default.rho.matrix
+user.params.list[['rho.r']] <- default.rho.matrix
 ```
 
 $\rho =$ `r user.params.list[['rho.default']]`
 
 ```{r 3f.rho0.2}
 design <- "blocked_c2_3f"
+user.params.list[['R2.3']] <- rep(0, M)
 blocked_c2_3f_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_rho0.2_power_plot)
 ```
@@ -210,15 +241,17 @@ print(blocked_c2_3f_rho0.2_power_plot)
 ```{r rho0.8}
 rho.default <- 0.8
 default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
-user.params.list[['rho.default']] <- rho.default
-user.params.list[['rho.X']] <- user.params.list[['rho.C']] <-rho.default
-user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[['rho.r']] <-rho.default
+user.params.list[['rho.V']] <- user.params.list[['rho.X']] <- user.params.list[['rho.C']] <- default.rho.matrix
+user.params.list[['rho.u0']] <- user.params.list[['rho.u1']] <- default.rho.matrix
+user.params.list[['rho.w0']] <- user.params.list[['rho.w1']] <- default.rho.matrix
+user.params.list[['rho.r']] <- default.rho.matrix
 ```
 
 $\rho =$ `r user.params.list[['rho.default']]`
 
 ```{r 3f.rho0.8}
 design <- "blocked_c2_3f"
+user.params.list[['R2.3']] <- rep(0, M)
 blocked_c2_3f_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_rho0.8_power_plot)
 ```
@@ -227,9 +260,10 @@ print(blocked_c2_3f_rho0.8_power_plot)
 # reset
 rho.default <- params.default[['rho.default']]
 default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
-user.params.list[['rho.default']] <- rho.default
-user.params.list[['rho.X']] <- user.params.list[['rho.C']] <-rho.default
-user.params.list[['rho.u']] <- user.params.list[['rho.v']] <- user.params.list[['rho.r']] <-rho.default
+user.params.list[['rho.V']] <- user.params.list[['rho.X']] <- user.params.list[['rho.C']] <- default.rho.matrix
+user.params.list[['rho.u0']] <- user.params.list[['rho.u1']] <- default.rho.matrix
+user.params.list[['rho.w0']] <- user.params.list[['rho.w1']] <- default.rho.matrix
+user.params.list[['rho.r']] <- default.rho.matrix
 ```
 
 
@@ -243,6 +277,7 @@ ATE (ES) = `r user.params.list[['ATE_ES']]`
 
 ```{r 3f.MDES0.12500}
 design <- "blocked_c2_3f"
+user.params.list[['R2.3']] <- rep(0, M)
 blocked_c2_3f_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_mdes0.1250.00.0.00_power_plot)
 ```
@@ -261,12 +296,14 @@ $\text{ICC}_2$ = `r user.params.list[['ICC.2']]`
 
 ```{r 3f.ICC20.7}
 design <- "blocked_c2_3f"
+user.params.list[['R2.3']] <- rep(0, M)
 blocked_c2_3f_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_ICC2.0.7_power_plot)
 ```
 
 ```{r 3r.ICC20.7}
 design <- "blocked_c2_3r"
+user.params.list[['R2.3']] <- params.default[['R2.3']]
 blocked_c2_3r_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3r_ICC2.0.7_power_plot)
 ```
@@ -283,12 +320,14 @@ $\text{ICC}_3$ = `r user.params.list[['ICC.3']]`
 
 ```{r 3f.ICC30.7}
 design <- "blocked_c2_3f"
+user.params.list[['R2.3']] <- rep(0, M)
 blocked_c2_3f_ICC3.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3f_ICC3.0.7_power_plot)
 ```
 
 ```{r 3r.ICC30.7}
 design <- "blocked_c2_3r"
+user.params.list[['R2.3']] <- params.default[['R2.3']]
 blocked_c2_3r_ICC3.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_c2_3r_ICC3.0.7_power_plot)
 ```
@@ -308,12 +347,14 @@ $\omega_3$ = `r user.params.list[['omega.3']]`
 
 ```{r 3f.omega30.8}
 design <- "blocked_c2_3f"
+user.params.list[['R2.3']] <- rep(0, M)
 blocked_i1_3f_omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3f_omega3.0.8_power_plot)
 ```
 
 ```{r 3r.omega30.8}
 design <- "blocked_c2_3r"
+user.params.list[['R2.3']] <- params.default[['R2.3']]
 blocked_i1_3r_omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3r_omega3.0.8_power_plot)
 ```
@@ -335,6 +376,7 @@ print(blocked_i1_3f_omega3.0.8ICC30.7_power_plot)
 
 ```{r 3r.omega30.8ICC30.7}
 design <- "blocked_c2_3r"
+user.params.list[['R2.3']] <- params.default[['R2.3']]
 blocked_i1_3r_omega3.0.8ICC30.7_power_plot <- gen.power.results.plot(gen_params_file_base(user.params.list, sim.params.list, design), design)
 print(blocked_i1_3r_omega3.0.8ICC30.7_power_plot)
 ```
